# lttng-trace

./: .gitignore  .gitreview  LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am  lttng-trace.c
